--- a/objects-library/source/info.plist
+++ b/objects-library/source/info.plist
@@ -230,6 +230,6 @@ fi</string>
 	<key>version</key>
 	<string>1.0.0</string>
 	<key>webaddress</key>
-	<string>https://github.com/nikitavoloboev</string>
+	<string>https://github.com/nikitavoloboev/small-workflows</string>
 </dict>
 </plist>
