--- a/utilities/source/info.plist
+++ b/utilities/source/info.plist
@@ -18,7 +18,7 @@
 	<key>disabled</key>
 	<false/>
 	<key>name</key>
-	<string>Utilities</string>
+	<string>Usefil utilities</string>
 	<key>objects</key>
 	<array>
 		<dict>
