--- a/folder-search/source/info.plist
+++ b/folder-search/source/info.plist
@@ -442,6 +442,6 @@ tell application "System Events"	if frontmost of process "iTerm2" is false then
 	<key>version</key>
 	<string>1.1.3</string>
 	<key>webaddress</key>
-	<string>https://github.com/nikitavoloboev</string>
+	<string>https://github.com/nikitavoloboev/small-workflows</string>
 </dict>
 </plist>
