--- a/go-play/source/info.plist
+++ b/go-play/source/info.plist
@@ -3,16 +3,26 @@
 <plist version="1.0">
 <dict>
 	<key>bundleid</key>
-	<string>nikivi.clean.folders</string>
+	<string>nikivi.go.play</string>
 	<key>category</key>
 	<string>mine</string>
 	<key>connections</key>
 	<dict>
-		<key>155ED3E5-4396-4B1B-BE88-90F3D55FC861</key>
+		<key>B62482BE-F9F8-4E81-BC4F-376931A2EEE9</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>73CA7F02-2273-405C-9D47-726815AA4385</string>
+				<string>81E69D82-0504-4F92-A607-C88110E69C64</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>destinationuid</key>
+				<string>8A0C6DCE-7A5E-4E1E-B841-576643197943</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -21,60 +31,11 @@
 				<false/>
 			</dict>
 		</array>
-		<key>5057395B-BBF8-4DC5-B5A2-654FA359196D</key>
+		<key>B9409AD1-C53F-48CB-84BB-632CAF2A75CF</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>42736838-B89C-45EB-8076-8BCB6F44C6CE</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
-		<key>73CA7F02-2273-405C-9D47-726815AA4385</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>3D5EFEB3-5C3E-49F3-9AB0-B6BEA80EDEAE</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-			<dict>
-				<key>destinationuid</key>
-				<string>A498E0E7-C6B7-4E93-9898-83DFED65F521</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
-		<key>D46423F8-CE62-4912-A854-DBCC0741CF03</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>5057395B-BBF8-4DC5-B5A2-654FA359196D</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
-		<key>DD6E7B84-2E1C-4DD1-8D5D-6385A774266D</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>5057395B-BBF8-4DC5-B5A2-654FA359196D</string>
+				<string>B62482BE-F9F8-4E81-BC4F-376931A2EEE9</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -87,78 +48,13 @@
 	<key>createdby</key>
 	<string>Nikita Voloboev &lt;nikita.voloboev@icloud.com&gt;</string>
 	<key>description</key>
-	<string>Cleans various folders from things</string>
+	<string>Make shareable go playground from selected code</string>
 	<key>disabled</key>
 	<false/>
 	<key>name</key>
-	<string>Clean folders</string>
+	<string>Go Play</string>
 	<key>objects</key>
 	<array>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>concurrently</key>
-				<false/>
-				<key>escaping</key>
-				<integer>102</integer>
-				<key>script</key>
-				<string>mv {query} ~/.Trash</string>
-				<key>scriptargtype</key>
-				<integer>0</integer>
-				<key>scriptfile</key>
-				<string></string>
-				<key>type</key>
-				<integer>0</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.script</string>
-			<key>uid</key>
-			<string>3D5EFEB3-5C3E-49F3-9AB0-B6BEA80EDEAE</string>
-			<key>version</key>
-			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>argumenttrimmode</key>
-				<integer>0</integer>
-				<key>argumenttype</key>
-				<integer>1</integer>
-				<key>fixedorder</key>
-				<false/>
-				<key>items</key>
-				<string>[{"title":"Downloads (Alfred workflows)","arg":"~\/Downloads\/*.alfredworkflow"},{"title":"Play (Everything)","arg":"~\/play\/*"},{"title":"Downloads (KM macros)","arg":"~\/Downloads\/*.kmmacros"}]</string>
-				<key>keyword</key>
-				<string>clean</string>
-				<key>runningsubtext</key>
-				<string></string>
-				<key>subtext</key>
-				<string>things inside () shows what will be trashed</string>
-				<key>title</key>
-				<string>Clean folders of things</string>
-				<key>withspace</key>
-				<true/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.input.listfilter</string>
-			<key>uid</key>
-			<string>73CA7F02-2273-405C-9D47-726815AA4385</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>triggerid</key>
-				<string>clean folders</string>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.trigger.external</string>
-			<key>uid</key>
-			<string>155ED3E5-4396-4B1B-BE88-90F3D55FC861</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
@@ -168,8 +64,8 @@
 				<integer>0</integer>
 				<key>script</key>
 				<string># THESE VARIABLES MUST BE SET. SEE THE ONEUPDATER README FOR AN EXPLANATION OF EACH.
-readonly remote_info_plist="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/clean-folders/source/info.plist"
-readonly workflow_url="https://raw.githubusercontent.com/vitorgalvao/alfred-workflows/master/$clean-folders/clean-folders.alfredworkflow"
+readonly remote_info_plist="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/search-files/source/info.plist"
+readonly workflow_url="https://raw.githubusercontent.com/vitorgalvao/alfred-workflows/master/$search-files/search-files.alfredworkflow"
 readonly download_type='direct'
 readonly frequency_check='4'
 
@@ -246,43 +142,7 @@ fi</string>
 			<key>type</key>
 			<string>alfred.workflow.action.script</string>
 			<key>uid</key>
-			<string>A498E0E7-C6B7-4E93-9898-83DFED65F521</string>
-			<key>version</key>
-			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>triggerid</key>
-				<string>trash desktop</string>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.trigger.external</string>
-			<key>uid</key>
-			<string>D46423F8-CE62-4912-A854-DBCC0741CF03</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>concurrently</key>
-				<false/>
-				<key>escaping</key>
-				<integer>102</integer>
-				<key>script</key>
-				<string>mv ~/Desktop/* ~/.Trash</string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string></string>
-				<key>type</key>
-				<integer>5</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.script</string>
-			<key>uid</key>
-			<string>5057395B-BBF8-4DC5-B5A2-654FA359196D</string>
+			<string>0EC960E3-BDFD-4C79-B76E-512F06470E85</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
@@ -298,106 +158,206 @@ fi</string>
 				<key>text</key>
 				<string></string>
 				<key>title</key>
-				<string>Emptied ~/Desktop</string>
+				<string>Copied link</string>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.output.notification</string>
 			<key>uid</key>
-			<string>42736838-B89C-45EB-8076-8BCB6F44C6CE</string>
+			<string>81E69D82-0504-4F92-A607-C88110E69C64</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>argumenttype</key>
-				<integer>2</integer>
-				<key>keyword</key>
-				<string>trash desktop</string>
-				<key>subtext</key>
+				<key>action</key>
+				<integer>0</integer>
+				<key>argument</key>
+				<integer>1</integer>
+				<key>focusedappvariable</key>
+				<false/>
+				<key>focusedappvariablename</key>
 				<string></string>
-				<key>text</key>
-				<string>Trash everything inside ~/Desktop</string>
-				<key>withspace</key>
+				<key>hotkey</key>
+				<integer>41</integer>
+				<key>hotmod</key>
+				<integer>393216</integer>
+				<key>hotstring</key>
+				<string>:</string>
+				<key>leftcursor</key>
+				<false/>
+				<key>modsmode</key>
+				<integer>0</integer>
+				<key>relatedAppsMode</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.trigger.hotkey</string>
+			<key>uid</key>
+			<string>B9409AD1-C53F-48CB-84BB-632CAF2A75CF</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>68</integer>
+				<key>script</key>
+				<string>import sys
+import urllib
+from urllib2 import Request, urlopen
+
+query = sys.argv[1]
+
+url = 'https://play.golang.org/share'
+
+request = Request(url, query)
+json = urlopen(request).read().decode()
+sys.stdout.write(json)</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>type</key>
+				<integer>3</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>B62482BE-F9F8-4E81-BC4F-376931A2EEE9</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>autopaste</key>
+				<false/>
+				<key>clipboardtext</key>
+				<string>https://play.golang.org/p/{query}</string>
+				<key>transient</key>
 				<false/>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.input.keyword</string>
+			<string>alfred.workflow.output.clipboard</string>
 			<key>uid</key>
-			<string>DD6E7B84-2E1C-4DD1-8D5D-6385A774266D</string>
+			<string>8A0C6DCE-7A5E-4E1E-B841-576643197943</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>browser</key>
+				<string></string>
+				<key>spaces</key>
+				<string></string>
+				<key>url</key>
+				<string>https://play.golang.org/p/{query}</string>
+				<key>utf8</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.openurl</string>
+			<key>uid</key>
+			<string>BCD45A73-C5A2-4B36-BBB8-DD6CE2D94511</string>
 			<key>version</key>
 			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>autopaste</key>
+				<false/>
+				<key>clipboardtext</key>
+				<string>https://goplay.space/#{query}</string>
+				<key>transient</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.clipboard</string>
+			<key>uid</key>
+			<string>EDB86F6C-30F2-4E1A-8F2C-4BD241F5EFD1</string>
+			<key>version</key>
+			<integer>2</integer>
 		</dict>
 	</array>
 	<key>readme</key>
 	<string></string>
 	<key>uidata</key>
 	<dict>
-		<key>155ED3E5-4396-4B1B-BE88-90F3D55FC861</key>
-		<dict>
-			<key>xpos</key>
-			<integer>10</integer>
-			<key>ypos</key>
-			<integer>60</integer>
-		</dict>
-		<key>3D5EFEB3-5C3E-49F3-9AB0-B6BEA80EDEAE</key>
-		<dict>
-			<key>xpos</key>
-			<integer>380</integer>
-			<key>ypos</key>
-			<integer>20</integer>
-		</dict>
-		<key>42736838-B89C-45EB-8076-8BCB6F44C6CE</key>
-		<dict>
-			<key>xpos</key>
-			<integer>370</integer>
-			<key>ypos</key>
-			<integer>350</integer>
-		</dict>
-		<key>5057395B-BBF8-4DC5-B5A2-654FA359196D</key>
-		<dict>
-			<key>xpos</key>
-			<integer>200</integer>
-			<key>ypos</key>
-			<integer>350</integer>
-		</dict>
-		<key>73CA7F02-2273-405C-9D47-726815AA4385</key>
-		<dict>
-			<key>note</key>
-			<string>Play is a folder I made and use (you can remove it)</string>
-			<key>xpos</key>
-			<integer>190</integer>
-			<key>ypos</key>
-			<integer>60</integer>
-		</dict>
-		<key>A498E0E7-C6B7-4E93-9898-83DFED65F521</key>
+		<key>0EC960E3-BDFD-4C79-B76E-512F06470E85</key>
 		<dict>
 			<key>colorindex</key>
 			<integer>12</integer>
 			<key>note</key>
 			<string>OneUpdater</string>
 			<key>xpos</key>
-			<integer>380</integer>
+			<integer>440</integer>
 			<key>ypos</key>
-			<integer>140</integer>
+			<integer>10</integer>
 		</dict>
-		<key>D46423F8-CE62-4912-A854-DBCC0741CF03</key>
+		<key>81E69D82-0504-4F92-A607-C88110E69C64</key>
 		<dict>
+			<key>xpos</key>
+			<integer>440</integer>
+			<key>ypos</key>
+			<integer>150</integer>
+		</dict>
+		<key>8A0C6DCE-7A5E-4E1E-B841-576643197943</key>
+		<dict>
+			<key>note</key>
+			<string>Official Go playground</string>
+			<key>xpos</key>
+			<integer>440</integer>
+			<key>ypos</key>
+			<integer>270</integer>
+		</dict>
+		<key>B62482BE-F9F8-4E81-BC4F-376931A2EEE9</key>
+		<dict>
+			<key>note</key>
+			<string>You can attach connection to where you want. Either:
+
+1. Official Go playground
+2. Go play Space</string>
+			<key>xpos</key>
+			<integer>210</integer>
+			<key>ypos</key>
+			<integer>160</integer>
+		</dict>
+		<key>B9409AD1-C53F-48CB-84BB-632CAF2A75CF</key>
+		<dict>
+			<key>note</key>
+			<string>Select some Go code and it will give you a playground to share</string>
 			<key>xpos</key>
 			<integer>10</integer>
 			<key>ypos</key>
-			<integer>300</integer>
+			<integer>160</integer>
 		</dict>
-		<key>DD6E7B84-2E1C-4DD1-8D5D-6385A774266D</key>
+		<key>BCD45A73-C5A2-4B36-BBB8-DD6CE2D94511</key>
 		<dict>
+			<key>note</key>
+			<string>Can also open the playground in the browser if you wish</string>
 			<key>xpos</key>
-			<integer>10</integer>
+			<integer>440</integer>
 			<key>ypos</key>
-			<integer>420</integer>
+			<integer>410</integer>
+		</dict>
+		<key>EDB86F6C-30F2-4E1A-8F2C-4BD241F5EFD1</key>
+		<dict>
+			<key>note</key>
+			<string>Go play space</string>
+			<key>xpos</key>
+			<integer>440</integer>
+			<key>ypos</key>
+			<integer>580</integer>
 		</dict>
 	</dict>
 	<key>version</key>
-	<string>2.1.2</string>
+	<string>1.0.2</string>
 	<key>webaddress</key>
 	<string>https://github.com/nikitavoloboev/small-workflows</string>
 </dict>
