--- a/imgur-album-download/source/info.plist
+++ b/imgur-album-download/source/info.plist
@@ -130,7 +130,7 @@
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>A19307BB-668D-4FC8-9F98-19BF57B96A1D</string>
+				<string>CDA43ED3-631B-4E9C-8F6D-87519AA66311</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -315,6 +315,29 @@ end alfred_script</string>
 		<dict>
 			<key>config</key>
 			<dict>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>script</key>
+				<string>python imguralbum.py {query} ~/Desktop</string>
+				<key>scriptargtype</key>
+				<integer>0</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>type</key>
+				<integer>5</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>A19307BB-668D-4FC8-9F98-19BF57B96A1D</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
 				<key>applescript</key>
 				<string>on alfred_script(q)
 tell application "Google Chrome" to return URL of active tab of front window
@@ -345,29 +368,6 @@ end alfred_script</string>
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>concurrently</key>
-				<false/>
-				<key>escaping</key>
-				<integer>102</integer>
-				<key>script</key>
-				<string>python imguralbum.py {query} ~/Desktop</string>
-				<key>scriptargtype</key>
-				<integer>0</integer>
-				<key>scriptfile</key>
-				<string></string>
-				<key>type</key>
-				<integer>5</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.script</string>
-			<key>uid</key>
-			<string>A19307BB-668D-4FC8-9F98-19BF57B96A1D</string>
-			<key>version</key>
-			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>lastpathcomponent</key>
 				<false/>
 				<key>onlyshowifquerypopulated</key>
@@ -394,9 +394,9 @@ end alfred_script</string>
 				<key>matchcasesensitive</key>
 				<false/>
 				<key>matchmode</key>
-				<integer>2</integer>
+				<integer>0</integer>
 				<key>matchstring</key>
-				<string>(https:\/\/imgur.com\/a\/)</string>
+				<string>^https:\/\/imgur.com\/a\/</string>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.utility.filter</string>
@@ -453,7 +453,7 @@ end alfred_script</string>
 				<key>matchmode</key>
 				<integer>1</integer>
 				<key>matchstring</key>
-				<string>(https:\/\/imgur.com\/a\/)</string>
+				<string>^https:\/\/imgur.com\/a\/</string>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.utility.filter</string>
@@ -501,9 +501,9 @@ end alfred_script</string>
 
 You can change the location inside the script</string>
 			<key>xpos</key>
-			<integer>630</integer>
+			<integer>700</integer>
 			<key>ypos</key>
-			<integer>190</integer>
+			<integer>40</integer>
 		</dict>
 		<key>AF76F468-6D6A-43D4-BFE8-FB7D3FE35031</key>
 		<dict>
@@ -533,7 +533,7 @@ You can change the location inside the script</string>
 		<key>CDA43ED3-631B-4E9C-8F6D-87519AA66311</key>
 		<dict>
 			<key>xpos</key>
-			<integer>790</integer>
+			<integer>900</integer>
 			<key>ypos</key>
 			<integer>190</integer>
 		</dict>
