--- a/wifi/source/info.plist
+++ b/wifi/source/info.plist
@@ -163,7 +163,7 @@
 				<key>subtext</key>
 				<string></string>
 				<key>title</key>
-				<string>Operate wifi</string>
+				<string>WiFi tools</string>
 				<key>withspace</key>
 				<true/>
 			</dict>
