--- a/months-numbers/source/info.plist
+++ b/months-numbers/source/info.plist
@@ -48,48 +48,6 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>triggerid</key>
-				<string>months</string>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.trigger.external</string>
-			<key>uid</key>
-			<string>57E7D8A0-DA41-457F-9FE1-154441AB917F</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>argumenttrimmode</key>
-				<integer>0</integer>
-				<key>argumenttype</key>
-				<integer>2</integer>
-				<key>fixedorder</key>
-				<false/>
-				<key>items</key>
-				<string>[{"title":"january (01)","arg":"01","subtitle":""},{"title":"february (02)","arg":"02","subtitle":""},{"title":"march (03)","arg":"03"},{"title":"april (04)","arg":"04"},{"title":"may (05)","arg":"05"},{"title":"june (06)","arg":"06"},{"title":"july (07)","arg":"07"},{"title":"august (08)","arg":"08"},{"title":"september (09)","arg":"09"},{"title":"october (10)","arg":"10"},{"title":"november (11)","arg":"11"},{"title":"december (12)","arg":"12"}]</string>
-				<key>keyword</key>
-				<string>months</string>
-				<key>runningsubtext</key>
-				<string></string>
-				<key>subtext</key>
-				<string></string>
-				<key>title</key>
-				<string>Months numbers</string>
-				<key>withspace</key>
-				<false/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.input.listfilter</string>
-			<key>uid</key>
-			<string>86EFED13-62E2-45A0-96FE-FDBB9E23A406</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>autopaste</key>
 				<false/>
 				<key>clipboardtext</key>
@@ -103,6 +61,48 @@
 			<string>3FD0DA9D-7238-4BCF-B96B-518BF96BC747</string>
 			<key>version</key>
 			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>1</integer>
+				<key>fixedorder</key>
+				<false/>
+				<key>items</key>
+				<string>[{"title":"January (01)","arg":"01","subtitle":""},{"title":"February (02)","arg":"02","subtitle":""},{"title":"March (03)","arg":"03"},{"title":"April (04)","arg":"04"},{"title":"May (05)","arg":"05"},{"title":"June (06)","arg":"06"},{"title":"July (07)","arg":"07"},{"title":"August (08)","arg":"08"},{"title":"September (09)","arg":"09"},{"title":"October (10)","arg":"10"},{"title":"November (11)","arg":"11"},{"title":"December (12)","arg":"12"}]</string>
+				<key>keyword</key>
+				<string>months</string>
+				<key>runningsubtext</key>
+				<string></string>
+				<key>subtext</key>
+				<string>Press enter to copy the month number</string>
+				<key>title</key>
+				<string>Months numbers</string>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.listfilter</string>
+			<key>uid</key>
+			<string>86EFED13-62E2-45A0-96FE-FDBB9E23A406</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>triggerid</key>
+				<string>months</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.trigger.external</string>
+			<key>uid</key>
+			<string>57E7D8A0-DA41-457F-9FE1-154441AB917F</string>
+			<key>version</key>
+			<integer>1</integer>
 		</dict>
 	</array>
 	<key>readme</key>
